# app-rust-zcash

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: misspellings_checks.yml
src/: app_ui.rs  consts.rs  log.rs  main.rs  parser.rs  settings.rs  swap.rs  utils.rs
src/app_ui/: address.rs  menu.rs  sign.rs
src/handlers/: get_public_key.rs  get_trusted_input.rs  get_version.rs  sign_tx.rs
src/parser/: compute.rs  error.rs  map_parse_error.rs  orchard.rs  reader.rs  sapling.rs
src/swap/: legacy.rs
src/utils/: base58_address.rs  bip32_path.rs  blake2b_256_pers.rs  extended_public_key.rs  hashers.rs
tests/: requirements.txt  test_pubkey_cmd.py  test_sign_cmd.py  test_trusted_input_cmd.py  utils.py
tests/application_client/: zcash_command_sender.py  zcash_currency_utils.py  zcash_response_unpacker.py  zcash_transaction.py  zcash_utils.py  zcash_verify_sign.py
tests/standalone/: test_error_cmd.py  test_pubkey_cmd.py  test_sign_cmd.py  test_trusted_input_cmd.py  test_version_cmd.py
tests/swap/: _helper_tool.py  cal_helper.py  conftest.py  requirements.txt  test_boilerplate.py  test_zcash.py
